<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#134e7c"
    android:layout_height="match_parent">
    c<ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/myinformation_mainbackground"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/titilelogo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:textColor="#0080ff"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:text="@string/fragment_ClassSport"
        />
    <RelativeLayout
        android:id="@+id/classsport_linerlayout1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_width="900dp"
        android:background="#f3f3f3f3"
        android:layout_height="200dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classSport_Tip"
            android:layout_marginLeft="10dp"
            android:textColor="#f75000"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:text="@string/classSport_SportRankTit"/>
      <lecho.lib.hellocharts.view.ColumnChartView
          android:id="@+id/cdprColumnChartView"
          android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
          android:layout_width="800dp"
          android:layout_height="150dp"
          >

      </lecho.lib.hellocharts.view.ColumnChartView>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="visible"
        android:background="#f3f3f3f3"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:layout_width="900dp"
        android:layout_height="250dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classSport_Tip"
            android:layout_marginLeft="10dp"
            android:textColor="#f75000"
        android:layout_marginTop="10dp"
            android:textSize="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classSport_HistoryTit"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            />

        <lecho.lib.hellocharts.view.LineChartView
            android:visibility="visible"
            android:id="@+id/classsport_linerlayout_h1"
            android:background="#f3f3f3f3"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="100dp"
            android:layout_width="800dp"
            android:layout_height="200dp">
        </lecho.lib.hellocharts.view.LineChartView>
        <lecho.lib.hellocharts.view.LineChartView
            android:visibility="gone"
            android:id="@+id/classsport_linerlayout_h2"
            android:background="#f3f3f3f3"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="100dp"
            android:layout_width="800dp"
            android:layout_height="200dp">
        </lecho.lib.hellocharts.view.LineChartView>
        <lecho.lib.hellocharts.view.LineChartView
            android:visibility="gone"
            android:id="@+id/classsport_linerlayout_h3"
            android:background="#f3f3f3f3"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="100dp"
            android:layout_width="800dp"
            android:layout_height="200dp">
        </lecho.lib.hellocharts.view.LineChartView>
      <ImageView

          android:id="@+id/classsport_btn1"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:layout_marginTop="40dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/classsport_name1"
          />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/classSport_btn1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView

            android:id="@+id/classsport_btn2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="115dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/classsport_name1"
            />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="125dp"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/classSport_btn2"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView

            android:id="@+id/classsport_btn3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="190dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/classsport_name1"
            />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/classSport_btn3"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</RelativeLayout>
