<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#134e7c"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".MyInformation.View.MyInformationActivity">
    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/logo"/>
    <RelativeLayout
        android:id="@+id/imageView5"
        android:layout_width="220dp"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/myinformation_infpbackground" >
        <sprotecc.com.example.easyhealth.eh_sprotecc.Adapter.CircleImageView
           android:id="@+id/myinformation_touxiang"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="105dp"
            android:layout_height="90dp"
            android:layout_width="90dp"/>
        <TextView
            android:id="@+id/myinformation_name"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="82dp"
            android:text="XXX"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:text="身高"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="210dp"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/myinformation_hight"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="193cm"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="240dp"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content" />
        <TextView
        android:layout_width="100dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="210dp"
        android:text="体重"
        android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/myinformation_weight"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="240dp"
            android:text="78kg"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:text="学号:"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/myinformation_usercode"
            android:layout_width="150dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:layout_alignParentBottom="true"
            android:textSize="10sp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="学号:"
            android:layout_height="wrap_content" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="320dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/myinformation_myhonor">
        <ListView
            android:layout_centerHorizontal="true"
            android:id="@+id/wocaonimagebi"
            android:layout_marginTop="50dp"
            android:layout_width="200dp"
            android:layout_height="240dp">
        </ListView>
    </RelativeLayout>



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="1000dp"
        android:layout_height="800dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/myinformation_mainbackground">
        <ImageView
            android:id="@+id/backmain"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/mainback"/>
 <ImageView
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:layout_marginLeft="20dp"
     android:layout_marginTop="20dp"

     android:background="@drawable/titilelogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:text="我的运动信息"
            android:textColor="#123e7c"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="230dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:background="#f3f3f3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="今日运动步数"/>
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/mytoday_sport"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_width="320dp"
                android:layout_height="180dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="230dp"
            android:layout_marginLeft="400dp"
            android:layout_marginTop="80dp"
            android:background="#f3f3f3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="今日活动度"/>
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/mytoday_activity"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_width="320dp"
                android:layout_height="180dp"
                />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="330dp"
            android:background="@drawable/myinformation_suggest" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="370dp"
            android:background="@drawable/myinformation_suggest"/>
        <TextView
            android:layout_marginLeft="33dp"
            android:layout_marginTop="330dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:text="今日运动情况"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginLeft="33dp"
            android:textColor="#ffffff"
            android:layout_marginTop="370dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="今日睡眠情况"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/decvice1"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="330dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="微笑度过每一天哦"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/decvice2"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="370dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="微笑度过每一天哦"
            android:textSize="20sp"
            />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="780dp"
            android:layout_marginTop="80dp"
            android:background="#d9ffff">
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="敬请期待"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="950dp"
            android:layout_height="230dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="410dp"
            android:background="#f3f3f3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classSport_Tip"
                android:layout_marginLeft="10dp"
                android:textColor="#f75000"
                android:layout_marginTop="10dp"
                android:textSize="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="我的运动历史"/>
            <ImageView
                android:id="@+id/btn_week"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/classsport_name1"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"/>
            <ImageView
                android:id="@+id/btn_month"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/classsport_name1"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="115dp"/>
            <ImageView
                android:id="@+id/btn_year"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/classsport_name1"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="170dp"/>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="65dp"
                android:gravity="center"
                android:layout_marginRight="45dp"
                android:text="@string/classSport_btn1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:layout_marginRight="45dp"
                android:text="@string/classSport_btn2"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="185dp"
                android:gravity="center"
                android:layout_marginRight="45dp"
                android:text="@string/classSport_btn3"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <lecho.lib.hellocharts.view.LineChartView
                android:visibility="visible"
                android:id="@+id/myHistory_l1"
                android:layout_alignParentBottom="true"
                android:layout_width="850dp"
                android:layout_height="180dp"
                >
            </lecho.lib.hellocharts.view.LineChartView>
            <lecho.lib.hellocharts.view.LineChartView
                android:visibility="gone"
                android:id="@+id/myHistory_l2"
                android:layout_alignParentBottom="true"
                android:layout_width="850dp"
                android:layout_height="180dp"
                >
            </lecho.lib.hellocharts.view.LineChartView>
            <lecho.lib.hellocharts.view.LineChartView
                android:visibility="gone"
                android:id="@+id/myHistory_l3"
                android:layout_alignParentBottom="true"
                android:layout_width="850dp"
                android:layout_height="180dp"
                >
            </lecho.lib.hellocharts.view.LineChartView>


        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>
